# lanhu-to-native

./: README.md
projects/news_writer_backend/backend/: .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
projects/news_writer_backend/backend/alembic/: env.py
projects/news_writer_backend/backend/alembic/versions/: 0001_initial.py  0002_unique_default_style.py
projects/news_writer_backend/backend/app/: __init__.py  bootstrap.py  main.py
projects/news_writer_backend/backend/app/api/: deps.py  middleware.py
projects/news_writer_backend/backend/app/core/: cache_bus.py  config.py  distributed_lock.py  errors.py  logging.py  request_context.py  security.py
projects/news_writer_backend/backend/app/data/: seed_rss_sources.json  seed_rss_sources.json.orig  seed_rss_sources.json.rej
projects/news_writer_backend/backend/app/db/: base.py  types.py
projects/news_writer_backend/backend/app/models/: __init__.py  app_setting.py  article.py  draft.py  draft_version.py  event.py  event_news_item.py  image_asset.py  llm_job.py  news_item.py  news_source.py  style_profile.py  user.py
projects/news_writer_backend/backend/app/prompts/: angle_generation.md  event_summary.md  format_for_toutiao.md  generate_article.md  image_slot_recommendation.md  outline_generation.md  rewrite.md  section_generation.md
projects/news_writer_backend/backend/app/schemas/: auth.py  draft.py  (+4 more)
projects/news_writer_backend/backend/scripts/: smoke.sh
projects/news_writer_backend/backend/tests/: conftest.py
(+87 files in other folders)
